--- a/AspNetCoreWebAppRazor/Pages/Index.cshtml
+++ b/AspNetCoreWebAppRazor/Pages/Index.cshtml
@@ -8,3 +8,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="text-center">
+    Il valore della mia chiave segreta è: <b>@Model._configuration["segreto"]</b>
+</div>
