Aggiunto parametri di vario tipo nel file di configurazione

--- a/AspNetCoreWebAppRazor/Pages/Index.cshtml
+++ b/AspNetCoreWebAppRazor/Pages/Index.cshtml
@@ -11,4 +11,13 @@
 
 <div class="text-center">
     Il valore della mia chiave segreta è: <b>@Model._configuration["segreto"]</b>
+    <br />
+    Data: @Model._configuration["data"]
+    <br />
+    Numero: @Model._configuration["numero"]
+    <br />
+    Parola: @Model._configuration["parola"]
+    <br />
+    Booleano: @Model._configuration["booleano"]
+    <br />
 </div>
